--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,11 +1,11 @@
-name: unit-tests
+name: axe
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
 jobs:
-  build:
+  axe:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,4 +15,8 @@ jobs:
           node-version: 12.x
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm start & npx wait-on http://localhost:3000
+      - name: Run axe
+        run: |
+          npm install -g @axe-core/cli
+          axe http://localhost:3000 --exit
